# goog-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  build.rs  install.sh  package-lock.json  package.json  skills-lock.json
.github/workflows/: release.yml
.sandcastle/: .gitignore  Dockerfile  implement-prompt.md  main.mts  merge-prompt.md  plan-prompt.md  review-prompt.md  verify-rust-workflow-notes.md  verify-rust-workflow.mts
.scratch/docs-location-probe/: high-level-docs-prd.md  issue-01-document-map.md  issue-02-lookup-commands.md  issue-03-text-writes.md  issue-04-images.md  issue-05-tables.md  issue-06-styles.md  issue-07-lists.md
.scratch/goog-cli-mvp/: PRD.md
.scratch/unified-access/: DRAFT.md
docs/: build-version-provenance-plan.md  docs-image-aspect-fit-plan.md  docs-local-image-staging-plan.md  local-docs-image-staging.md  slides-authoring-improvement-plan.md
docs/adr/: 0001-single-oauth-app-for-all-accounts.md  0002-system-keychain-for-tokens.md  0003-incremental-oauth-scopes.md  0004-cargo-workspace-crate-per-api.md  0005-hand-written-api-types-over-generated-crates.md  0006-single-crate-layout.md  0007-test-code-outside-production-files.md  0008-docs-starts-with-raw-get-and-batch-update.md  0009-mail-starts-with-message-read-json.md  0010-sheets-starts-with-values-commands-and-raw-structural-batch-update.md  0011-docs-adds-high-level-editing-commands.md  0012-unified-access-account-fallback.md  0013-github-releases-own-distribution.md  0014-upfront-full-scope-login.md  0015-file-token-store.md  0016-slides-adds-declarative-deck-authoring.md
docs/agents/: domain.md  e2e-testing.md  gnhf-workflow.md  issue-tracker.md  triage-labels.md
docs/distribution/: homebrew-tap.md  release-operator.md
examples/slides/: responsible-ai.yaml
goog/: Cargo.toml
goog-auth/: Cargo.toml
goog-auth/src/: config.rs  error.rs  lib.rs  setup.rs
goog-drive/: Cargo.toml
goog-drive/src/: error.rs
goog/src/: cli.rs  main.rs
outputs/: responsible-ai-banking-virtual-assistant.pptx
scripts/: render-homebrew-formula.rb  verify-release-asset.sh
skills/docs/: SKILL.md
skills/goog/: SKILL.md
skills/sheets/: SKILL.md
skills/slides/: SKILL.md
src/: cli.rs  cli_tests.rs  docs_tests.rs  drive_tests.rs  lib.rs  mail_tests.rs  main.rs  sandcastle_tests.rs  sheets_tests.rs  test_support.rs  update.rs  version.rs
src/auth/: account.rs  account_tests.rs  client.rs  client_tests.rs  config.rs  config_tests.rs  error.rs  list.rs  list_tests.rs  login.rs  login_tests.rs  mod.rs  setup.rs  setup_tests.rs  state.rs  testing.rs  unified_access.rs  unified_access_tests.rs
src/calendar/: error.rs  mod.rs
src/commands/: auth.rs  auth_tests.rs  calendar.rs  calendar_tests.rs  docs.rs  docs_tests.rs  drive.rs  drive_tests.rs  mail.rs  mail_tests.rs  mod.rs  sheets.rs  sheets_tests.rs  slides.rs  slides_tests.rs
src/docs/: change.rs  change_tests.rs  error.rs  image_fit.rs  image_fit_tests.rs  image_metadata.rs  image_metadata_tests.rs  (+8 more)
tests/: build_provenance_tests.rs  distribution_artifacts_tests.rs  update_notice_tests.rs
(+49 files in other folders)
