[package]
name = "goog"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "goog"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
dialoguer = "0.11"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
webbrowser = "1"
tiny_http = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indicatif = "0.17"
bytes = "1"
futures-util = "0.3"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
security-framework = "3.7"
security-framework-sys = "2.15"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
