[package]
name = "goog"
version = "0.2.6-preview.1"
edition = "2021"

[[bin]]
name = "goog"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
toml = "0.8"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
semver = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
webbrowser = "1"
tiny_http = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indicatif = "0.17"
bytes = "1"
futures-util = "0.3"
base64 = "0.22"
tempfile = "3"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
kamadak-exif = "0.6"

[dev-dependencies]
wiremock = "0.6"
